[gd_scene load_steps=23 format=2]

[ext_resource path="res://Sprite/Player/Idle/09-Idle Sword/Idle Sword 01.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://Sprite/Player/Idle/09-Idle Sword/Idle Sword 03.png" type="Texture" id=3]
[ext_resource path="res://Sprite/Player/Idle/09-Idle Sword/Idle Sword 02.png" type="Texture" id=4]
[ext_resource path="res://Sprite/Player/Idle/09-Idle Sword/Idle Sword 04.png" type="Texture" id=5]
[ext_resource path="res://Sprite/Player/Idle/09-Idle Sword/Idle Sword 05.png" type="Texture" id=6]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 04.png" type="Texture" id=7]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 05.png" type="Texture" id=8]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 06.png" type="Texture" id=9]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 01.png" type="Texture" id=10]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 03.png" type="Texture" id=11]
[ext_resource path="res://Sprite/Player/Run/10-Run Sword/Run Sword 02.png" type="Texture" id=12]
[ext_resource path="res://Sprite/Player/Attack/15-Attack 1/Attack 1 01.png" type="Texture" id=13]
[ext_resource path="res://Sprite/Player/Attack/15-Attack 1/Attack 1 02.png" type="Texture" id=14]
[ext_resource path="res://Sprite/Player/Attack/15-Attack 1/Attack 1 03.png" type="Texture" id=15]
[ext_resource path="res://Sprite/Player/Jump/11-Jump Sword/Jump Sword 01.png" type="Texture" id=16]
[ext_resource path="res://Sprite/Player/Fall/12-Fall Sword/Fall Sword 01.png" type="Texture" id=17]
[ext_resource path="res://Sprite/Player/Jump/11-Jump Sword/Jump Sword 02.png" type="Texture" id=18]
[ext_resource path="res://Sprite/Player/Jump/11-Jump Sword/Jump Sword 03.png" type="Texture" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "attack1",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 11 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "fall",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 5.94239 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 24.5026, 27.5706 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
collision_mask = 18
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "idle"

[node name="Attack1Hitbox" type="Area2D" parent="AnimatedSprite"]
position = Vector2( 0, 0.145996 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionAttack1" type="CollisionShape2D" parent="AnimatedSprite/Attack1Hitbox"]
position = Vector2( 46.5, 6.5 )
shape = SubResource( 2 )
disabled = true

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 0.0382767, -4.34157 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
